Changed video link

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <section class="section section-3" id="video">
 
           <div class="video">
-            <iframe class="VideoPreview" src="https://www.youtube.com/embed/i0EXQ7SdTug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe class="VideoPreview" src="https://www.youtube.com/watch?v=m52HjEH2cnk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
 
           
