--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
           <ul>
             <li><a class="ListLink" href="https://play.google.com/store/apps/details?id=com.RiseDice.Marsadventures">PLAY STORE</a></li>
-            <li><a class="ListLink" href="">APP STORE</a></li>
+            <li><a class="ListLink" href="https://apps.apple.com/app/id6447289995?platform=iphone">APP STORE</a></li>
             <li><a class="ListLink" href="#footer">CONTACT</a></li>
             <li><a class="ListLink" href="#About">ABOUT</a></li>
           </ul>
