--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="Mobile-Menu">
         <li><a class="ListLink" id="link_1" href="https://play.google.com/store/apps/details?id=com.RiseDice.Marsadventures">PLAY STORE</a></li>
-        <li><a class="ListLink" id="link_2" href="">APP STORE</a></li>
+        <li><a class="ListLink" id="link_2" href="https://apps.apple.com/app/id6447289995?platform=iphone">APP STORE</a></li>
         <li><a class="ListLink" id="link_3" href="#footer">CONTACT</a></li>
         <li><a class="ListLink" id="link_4" href="#About">ABOUT</a></li>
       </div>
@@ -78,7 +78,7 @@
 
 
            <a href="https://play.google.com/store/apps/details?id=com.RiseDice.Marsadventures" class="Playstore"><img src="Assets/GooglePlay.png" alt="" class="Playstore"></a>
-           <a href="" class="Appstore"><img src="Assets/Appstore.png" alt="" class="Appstore"></a>
+           <a href="https://apps.apple.com/app/id6447289995?platform=iphone" class="Appstore"><img src="Assets/Appstore.png" alt="" class="Appstore"></a>
 
 
            <div class="Screenshots_Container">
